[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Config/volume.gd" type="Script" id=1]
[ext_resource path="res://Images/gui_/panels/small panel 2.png" type="Texture" id=2]
[ext_resource path="res://Images/gui_/buttons/music off button.png" type="Texture" id=3]
[ext_resource path="res://Images/gui_/buttons/music on.png" type="Texture" id=4]
[ext_resource path="res://Images/gui_/buttons/x button passive.png" type="Texture" id=5]
[ext_resource path="res://Images/gui_/buttons/x button active.png" type="Texture" id=6]

[node name="SettingsPopUpMenu" type="PopupMenu"]
margin_left = 220.0
margin_top = 30.0
margin_right = 420.0
margin_bottom = 280.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 100.898, 123.206 )
scale = Vector2( 2.08293, 2.14783 )
texture = ExtResource( 2 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 42.0
margin_top = 127.0
margin_right = 184.0
margin_bottom = 143.0
min_value = -20.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 44.0
margin_top = 83.0
margin_right = 104.0
margin_bottom = 98.0
rect_scale = Vector2( 1.2, 1.2 )
text = "Volume"

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 70.0
margin_top = 61.0
margin_right = 146.0
margin_bottom = 101.0
rect_scale = Vector2( 1.5, 1.5 )
custom_icons/off = ExtResource( 3 )
custom_icons/on = ExtResource( 4 )
pressed = true
action_mode = 0

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 57.0
margin_top = 196.0
margin_right = 152.0
margin_bottom = 219.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
